k8s/trips/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trips-ingress
  namespace: api
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/docs
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/json
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
